feat： 修改了对应的角色模块的细节（很多细节，我忘写了。。。）聊天室模块开始写了
